# platformhub

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
platformhub/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
platformhub/routers/: admin.py  auth.py  catalog.py  requests.py
platformhub/services/: approval.py  generator.py
platformhub/templates/manifests/: k8s_namespace.yaml.j2  rds_database.tf.j2  s3_bucket.tf.j2
platformhub/templates/pages/: base.html  catalog.html  dashboard.html  index.html  login.html  new_request.html  register.html  reviews.html
tests/: conftest.py  test_auth.py  test_catalog.py  test_health.py  test_requests.py  test_workflow.py
