[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platformhub"
version = "0.1.0"
description = "Developer self-service portal for infrastructure provisioning"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "José Pérez", email = "jose@gestiondigital.es" },
]
keywords = ["platform-engineering", "self-service", "kubernetes", "terraform", "internal-developer-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.21",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/y0s3ph/platformhub"
Repository = "https://github.com/y0s3ph/platformhub"
Issues = "https://github.com/y0s3ph/platformhub/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S105", "B008", "S701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["platformhub"]
omit = ["tests/*"]
